Using created functions to train and display model results.

--- a/notebooks/MLP for PIMA dataset.ipynb
+++ b/notebooks/MLP for PIMA dataset.ipynb
@@ -1,13 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"../src/\")"
+    "sys.path.append(\"../ml/\")"
    ]
   },
   {
@@ -19,8 +26,11 @@
     "import os\n",
     "\n",
     "import pandas as pd\n",
+    "from sklearn.neural_network import MLPClassifier\n",
     "\n",
-    "from preprocessing import splip_x_y, generate_train_test, scale_data"
+    "from preprocessing import splip_x_y, generate_train_test, scale_data\n",
+    "from model import Classifier\n",
+    "from metrics import classification_metrics, multiple_run_metrics"
    ]
   },
   {
@@ -164,113 +174,311 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preprocessing data"
+    "### Single run of MLP model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_col = 'Outcome'\n",
-    "x, y = splip_x_y(df=df, target_col=target_col)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_size = 0.25\n",
-    "x_train, x_test, y_train, y_test = generate_train_test(x=x, y=y, test_size=test_size, stratify=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(576, 8), (192, 8), (576,), (192,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f'{x_train.shape}, {x_test.shape}, {y_train.shape}, {y_test.shape}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[65.10416666666667, 34.895833333333336]"
+       "MLPClassifier(activation='tanh', alpha=1.0, hidden_layer_sizes=(8,),\n",
+       "              max_iter=1000, solver='lbfgs')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Original data stratification\n",
-    "list(100 * df[target_col].value_counts()/len(df[target_col]))"
+    "nvar = df.shape[1] - 1\n",
+    "mlp = MLPClassifier(hidden_layer_sizes=(nvar,),\n",
+    "                      activation='tanh',\n",
+    "                      solver='lbfgs',\n",
+    "                      alpha=1.0,\n",
+    "                      verbose=False,\n",
+    "                      max_iter=1000)\n",
+    "\n",
+    "mlp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "y_train: [65.10416666666667, 34.895833333333336]\n",
-      "y_test [65.10416666666667, 34.895833333333336]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<model.Classifier at 0x4fb6448>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Splitted data stratification\n",
-    "print('y_train:', list(100 * y_train.value_counts()/len(y_train)))\n",
-    "print('y_test', list(100 * y_test.value_counts()/len(y_test)))"
+    "classifier = Classifier(model=mlp)\n",
+    "classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train_sc, x_test_sc = scale_data(x_train=x_train, x_test=x_test)"
+    "result = classifier.single_run(df=df, target_col='Outcome', test_size=0.25, stratify=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "xtrain - mean: 0.0, std: 1.0\n",
-      "xtest - mean: 0.04247, std: 1.02295\n"
+      "dict_keys(['train', 'test'])\n"
      ]
     }
    ],
    "source": [
-    "print(f'xtrain - mean: {x_train_sc.mean().round(5)}, std: {x_train_sc.std().round(5)}')\n",
-    "print(f'xtest - mean: {x_test_sc.mean().round(5)}, std: {x_test_sc.std().round(5)}')"
+    "print(result.keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_acc, train_prec, train_rec, train_fscore = classification_metrics(*result['train'])\n",
+    "test_acc, test_prec, test_rec, test_fscore = classification_metrics(*result['test'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.84 0.73\n",
+      "precision: [0.86 0.8 ] [0.77 0.64]\n",
+      "recall: [0.9  0.74] [0.84 0.54]\n",
+      "fscore: [0.88 0.77] [0.8  0.58]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('accuracy:', train_acc.round(2), test_acc.round(2))\n",
+    "print('precision:', train_prec.round(2), test_prec.round(2))\n",
+    "print('recall:', train_rec.round(2), test_rec.round(2))\n",
+    "print('fscore:', train_fscore.round(2), test_fscore.round(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Multiple run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = classifier.multiple_runs(n=30, df=df, target_col='Outcome', test_size=0.25, stratify=True, scaler=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, dict, dict_keys(['train', 'test']))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(result), type(result), result.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mean': accuracy                                     0.847467\n",
+      "precision                [0.8671666666666665, 0.8061]\n",
+      "recall       [0.9041333333333333, 0.7413666666666668]\n",
+      "fscore       [0.8852666666666666, 0.7723333333333333]\n",
+      "dtype: object, 'std': accuracy    0.014222\n",
+      "dtype: float64}\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_res = multiple_run_metrics(result['train'])\n",
+    "print(train_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['mean', 'std'])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_res.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mean': accuracy                                     0.737567\n",
+      "precision    [0.7860333333333333, 0.6378333333333333]\n",
+      "recall       [0.8213333333333335, 0.5809666666666667]\n",
+      "fscore       [0.8027666666666666, 0.6061333333333335]\n",
+      "dtype: object, 'std': accuracy    0.028003\n",
+      "dtype: float64}\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_res = multiple_run_metrics(result['test'])\n",
+    "print(test_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NDIGITS = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>train_mean</th>\n",
+       "      <th>test_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>accuracy</th>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>precision</th>\n",
+       "      <td>[0.87, 0.81]</td>\n",
+       "      <td>[0.79, 0.64]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>recall</th>\n",
+       "      <td>[0.9, 0.74]</td>\n",
+       "      <td>[0.82, 0.58]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fscore</th>\n",
+       "      <td>[0.89, 0.77]</td>\n",
+       "      <td>[0.8, 0.61]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             train_mean     test_mean\n",
+       "accuracy           0.85          0.74\n",
+       "precision  [0.87, 0.81]  [0.79, 0.64]\n",
+       "recall      [0.9, 0.74]  [0.82, 0.58]\n",
+       "fscore     [0.89, 0.77]   [0.8, 0.61]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(data = [\n",
+    "    (train_res['mean'].accuracy.round(NDIGITS), test_res['mean'].accuracy.round(NDIGITS)),\n",
+    "    (train_res['mean'].precision.round(NDIGITS), test_res['mean'].precision.round(NDIGITS)),\n",
+    "    (train_res['mean'].recall.round(NDIGITS), test_res['mean'].recall.round(NDIGITS)),\n",
+    "    (train_res['mean'].fscore.round(NDIGITS), test_res['mean'].fscore.round(NDIGITS)),\n",
+    "], columns=['train_mean', 'test_mean'], index=['accuracy', 'precision', 'recall', 'fscore'])"
    ]
   },
   {
